--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -1,5 +1,5 @@
 name=Ref 3.x distro
-version=${project.version}
+version=3.0.0
 war.openmrs=${openmrs.version}
 omod.initializer=${initializer.version}
 omod.fhir2=${fhir2.version}
@@ -11,9 +11,8 @@ omod.metadatamapping=${metadatamapping.version}
 omod.metadatasharing=${metadatasharing.version}
 omod.openconceptlab=${openconceptlab.version}
 omod.owa=${owa.version}
-omod.referencedemodata=${referencedemodata.version}
 omod.attachments=${attachments.version}
-omod.queue=${queue.version}
+
 omod.appointments=${appointments.version}
 omod.appointments.groupId=org.bahmni.module
 omod.cohort=${cohort.version}
@@ -23,6 +22,3 @@ omod.calculation=${calculation.version}
 omod.htmlwidgets=${htmlwidgets.version}
 omod.serialization.xstream=${serialization-xstream.version}
 omod.serialization.xstream.type=omod
-omod.ordertemplates=${ordertemplates.version}
-omod.patientflags=${patientflags.version}
-omod.o3forms=${o3forms.version}
