--- a/frontend/ethiohri-configuration.json
+++ b/frontend/ethiohri-configuration.json
@@ -105,8 +105,7 @@
           "kebela",
           "houseNumber",
           "hometelephoneNumber",
-          "worktelephoneNumber",
-          "phone & email"
+          "worktelephoneNumber"
         ]
       },
       {
