configuration files & importmap.json updates

--- a/frontend/spa-build-config.json
+++ b/frontend/spa-build-config.json
@@ -5,5 +5,5 @@
   "defaultLocale": "$SPA_DEFAULT_LOCALE",
   "importmap": "$SPA_PATH/importmap.json",
   "routes": "$SPA_PATH/routes.registry.json",
-  "supportOffline": false
+  "supportOffline": true
 }
