configuartion files update

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,13 +10,14 @@ RUN mkdir -p /app
 WORKDIR /app
 
 COPY spa-assemble-config.json .
-COPY spa-build-config.json .
+COPY ethiohri-configuration.json .
 
 ARG CACHE_BUST
-RUN npx --legacy-peer-deps openmrs@${APP_SHELL_VERSION:-next} assemble --manifest --mode config --config spa-assemble-config.json --target ./spa
-RUN npx --legacy-peer-deps openmrs@${APP_SHELL_VERSION:-next} build --build-config spa-build-config.json --target ./spa
-RUN if [ ! -f ./spa/index.html ]; then echo 'Build failed. Please check the logs above for details. This may have happened because of an update to a library that OpenMRS depends on.'; exit 1; fi
-
+RUN npx --legacy-peer-deps openmrs@${APP_SHELL_VERSION:-next} assemble --manifest --mode config --config spa-build-config.json --target ./spa
+RUN npx --legacy-peer-deps openmrs@${APP_SHELL_VERSION:-next} build --config-url ethiohri-configuration.json --build-config spa-build-config.json --target ./spa
+COPY images/ethiohri_logo_dark.svg ./spa/ethiohri_logo_dark.svg
+COPY images/ethiohri_logo_light.svg ./spa/ethiohri_logo_light.svg
+COPY ethiohri-configuration.json ./spa/ethiohri-configuration.json
 #--------------------------------------------
 # Runtime Stage - Published Image
 #--------------------------------------------
@@ -36,6 +37,6 @@ RUN chmod +x /usr/local/bin/startup.sh
 COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY --from=dev /app/spa /usr/share/nginx/html
-COPY config-core_demo.json /usr/share/nginx/html
+COPY ethiohri-configuration.json.json /usr/share/nginx/html
 
 CMD ["/usr/local/bin/startup.sh"]
