--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -1,42 +1,48 @@
 {
   "frontendModules": {
-    "@openmrs/esm-home-app": "next",
-    "@openmrs/esm-patient-notes-app": "next",
-    "@openmrs/esm-patient-forms-app": "next",
-    "@openmrs/esm-patient-programs-app": "next",
-    "@openmrs/esm-patient-attachments-app": "next",
-    "@openmrs/esm-patient-search-app": "next",
-    "@openmrs/esm-patient-medications-app": "next",
-    "@openmrs/esm-patient-chart-app": "next",
-    "@openmrs/esm-patient-immunizations-app": "next",
-    "@openmrs/esm-patient-conditions-app": "next",
-    "@openmrs/esm-dispensing-app": "next",
-    "@openmrs/esm-patient-banner-app": "next",
-    "@openmrs/esm-devtools-app": "next",
-    "@openmrs/esm-login-app": "next",
-    "@openmrs/esm-patient-registration-app": "next",
-    "@openmrs/esm-patient-allergies-app": "next",
-    "@openmrs/esm-primary-navigation-app": "next",
-    "@openmrs/esm-patient-vitals-app": "next",
-    "@openmrs/esm-implementer-tools-app": "next",
-    "@openmrs/esm-patient-orders-app": "next",
-    "@openmrs/esm-active-visits-app": "next",
-    "@openmrs/esm-system-admin-app": "next",
-    "@openmrs/esm-patient-labs-app": "next",
-    "@openmrs/esm-form-builder-app": "next",
-    "@openmrs/esm-service-queues-app": "next",
-    "@openmrs/esm-patient-flags-app": "next",
-    "@openmrs/esm-generic-patient-widgets-app": "next",
-    "@openmrs/esm-form-engine-app": "next",
-    "@ohri/openmrs-esm-ohri-core-app": "next",
-    "@ohri/openmrs-esm-ohri-form-render-app": "next",
+    "@openmrs/esm-home-app": "5.3.1-pre.451",
+    "@openmrs/esm-patient-notes-app": "8.0.2-pre.5033",
+    "@openmrs/esm-patient-forms-app": "8.0.2-pre.5033",
+    "@openmrs/esm-patient-programs-app": "8.0.2-pre.5033",
+    "@openmrs/esm-patient-attachments-app": "8.0.2-pre.5033",
+    "@openmrs/esm-patient-search-app": "7.0.1-pre.3689",
+    "@openmrs/esm-patient-medications-app": "8.0.2-pre.5033",
+    "@openmrs/esm-patient-chart-app": "8.0.2-pre.5033",
+    "@openmrs/esm-patient-immunizations-app": "8.0.2-pre.5033",
+    "@openmrs/esm-patient-conditions-app": "8.0.2-pre.5033",
+    "@openmrs/esm-dispensing-app": "1.3.3-pre.305",
+    "@openmrs/esm-patient-banner-app": "8.0.2-pre.5033",
+    "@openmrs/esm-devtools-app": "5.7.1-pre.2076",
+    "@openmrs/esm-login-app": "5.7.1-pre.2076",
+    "@openmrs/esm-patient-registration-app": "7.0.1-pre.3689",
+    "@openmrs/esm-patient-allergies-app": "8.0.2-pre.5033",
+    "@openmrs/esm-primary-navigation-app": "5.7.1-pre.2076",
+    "@openmrs/esm-patient-vitals-app": "8.0.2-pre.5033",
+    "@openmrs/esm-implementer-tools-app": "5.7.1-pre.2076",
+    "@openmrs/esm-patient-orders-app": "8.0.2-pre.5033",
+    "@openmrs/esm-active-visits-app": "7.0.1-pre.3689",
+    "@openmrs/esm-system-admin-app": "4.0.4-pre.141",
+    "@openmrs/esm-patient-labs-app": "8.0.2-pre.5033",
+    "@openmrs/esm-form-builder-app": "2.5.1-pre.1049",
+    "@openmrs/esm-service-queues-app": "7.0.1-pre.3689",
+    "@openmrs/esm-patient-flags-app": "8.0.2-pre.5033",
+    "@openmrs/esm-generic-patient-widgets-app": "8.0.2-pre.5033",
+    "@openmrs/esm-form-engine-app": "8.0.2-pre.5033",
+    "@ohri/openmrs-esm-ohri-core-app": "2.3.7-pre.447",
+    "@ohri/openmrs-esm-ohri-form-render-app": "2.3.7-pre.447",
     "@icap-ethiopia/esm-ethiohri-app": "next",
-    "@openmrs/esm-openconceptlab-app": "next",
-    "@openmrs/esm-patient-lists-app": "next",
-    "@openmrs/esm-patient-list-management-app": "next",
-    "@openmrs/esm-cohort-builder-app": "next",
-    "@openmrs/esm-fast-data-entry-app": "next",
-    "@openmrs/esm-appointments-app": "next"
+    "@openmrs/esm-openconceptlab-app": "4.0.4-pre.141",
+    "@openmrs/esm-patient-lists-app": "8.0.2-pre.5033",
+    "@openmrs/esm-patient-list-management-app": "7.0.1-pre.3689",
+    "@openmrs/esm-cohort-builder-app": "4.0.1-pre.225",
+    "@openmrs/esm-fast-data-entry-app": "1.0.1-pre.180",
+    "@openmrs/esm-appointments-app": "7.0.1-pre.3689"
   },
-  "excludedFrontendModules": []
+  "spaPath": "$SPA_PATH",
+  "apiUrl": "$API_URL",
+  "configUrls": ["$SPA_CONFIG_URLS"],
+  "defaultLocale": "$SPA_DEFAULT_LOCALE",
+  "importmap": "$SPA_PATH/importmap.json",
+  "routes": "$SPA_PATH/routes.registry.json",
+  "supportOffline": true
 }
